--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-paginate": "^8.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.20",
