--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-paginate": "^8.1.3"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.21",
