--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "lucide-react": "^0.320.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
